--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,9 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7.1"
-        // NOTE: Do not place your application dependencies here; they belong
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.13.0'
+        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.6.2'
+        classpath 'com.dicedmelon.gradle:jacoco-android:0.1.4'
         // in the individual module build.gradle files
     }
 }
